# BinLens

./: Cargo.toml
src/: file_picker.rs  main.rs  pixel_mode.rs  preview.rs  shader.rs  shader.wgsl
