[package]
name = "binlens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["advanced", "canvas", "image", "lazy"] }
rayon = "1.10.0"
rfd = "0.14.1"
bytemuck = "1.15.0"
glam = { version="0.27.0", features=[ "bytemuck" ] }
