[package]
name = "binlens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["advanced", "canvas", "image", "lazy"] }
rfd = "0.14.1"
bytemuck = "1.15.0"
glam = { version="0.27.0", features=[ "bytemuck" ] }
iced_native = "0.10.3"
iced_futures = "0.12.0"

[profile.release]
strip = true
lto = true
